--- a/index.html
+++ b/index.html
@@ -885,46 +885,6 @@ All the images and ground truth labels in the dataset are stored in PNG format w
 </div>
 </div>
     
-    
-<!-- End Gallery -->
-<!-- Testimonials -->
-<div class="testimonials">
-  <div class="testimonials-overlay section-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 offset-md-1">
-          <div class="owl-carousel owl-theme">
-            <div class="testimonial-item text-center">
-              <div class="icon"> <i class="fas fa-comments"></i> </div>
-              <p class="m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <div class="testimonial-author text-center">
-                <h5>Rup Jakhar</h5>
-                <h6>Web Desinger</h6>
-              </div>
-            </div>
-            <div class="testimonial-item text-center">
-              <div class="icon"> <i class="fas fa-comments"></i> </div>
-              <p class="m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <div class="testimonial-author text-center">
-                <h5>Yogesh Singh</h5>
-                <h6>Web Desinger</h6>
-              </div>
-            </div>
-            <div class="testimonial-item text-center">
-              <div class="icon"> <i class="fas fa-comments"></i> </div>
-              <p class="m-auto">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <div class="testimonial-author text-center">
-                <h5>Vivek Singh</h5>
-                <h6>Web Desinger</h6>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End Testimonials --> 
 
 <!-- Contact -->
 <div class="contact section-padding" data-scroll-index='4'>
@@ -942,14 +902,16 @@ All the images and ground truth labels in the dataset are stored in PNG format w
               <h4>Phone :</h4>
               <p>0123456789</p>
             </div>
-          </div>
+            </div> </div>
+       <div class="col-lg-5 col-md-4">
           <div class="info-box">
             <div class="icon"> <i class="fas fa-map-marker-alt"></i> </div>
             <div class="content">
               <h4>Address :</h4>
               <p>New Delhi, India</p>
             </div>
-          </div>
+           </div> </div>
+      <div class="col-lg-5 col-md-4">
           <div class="info-box">
             <div class="icon"> <i class="fas fa-envelope"></i> </div>
             <div class="content">
@@ -959,45 +921,6 @@ All the images and ground truth labels in the dataset are stored in PNG format w
           </div>
         </div>
       </div>
-      <div class="col-lg-7 col-md-8">
-        <div class="contact-form">
-          <form class='form' id='contact-form' method='post' data-toggle='validator'>
-            <input type='hidden' name='form-name' value='contact-form' />
-            <div class="messages"></div>
-            <div class="controls">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <input id="form_name" type="text" name="name" placeholder="Name *" required data-error="name is required.">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="form-group">
-                    <input id="form_email" type="email" name="email" placeholder="Email *" required data-error="Valid email is required.">
-                    <div class="help-block with-errors"></div>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <input id="form_subject" type="text" name="subject" placeholder="Subject">
-                  </div>
-                </div>
-                <div class="col-lg-12 form-group">
-                  <textarea id="form_message" name="message" class="form-control" placeholder=" Type Your Message " rows="4" required data-error="Please,leave us a message."></textarea>
-                  <div class="help-block with-errors"></div>
-                </div>
-                <div class="col-lg-12 text-center">
-                  <button class="bttn">Send Message</button>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- End Contact -->
 <footer class="footer-copy">
   <div class="container-fluid">
