--- a/index.html
+++ b/index.html
@@ -921,6 +921,9 @@ All the images and ground truth labels in the dataset are stored in PNG format w
           </div>
         </div>
       </div>
+      </div>
+    </div>
+        
 <!-- End Contact -->
 <footer class="footer-copy">
   <div class="container-fluid">
