--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
     
 
 <!-- Services -->
-<div class="services section-padding bg-grey" data-scroll-index='2'>
+<div class="services section-padding" data-scroll-index='2'>
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
@@ -920,34 +920,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-images"></i> </div>
-          <div class="icon-text">
-            <h4 class="title-box">Easy-to-Use Data and Labels Format</h4>
-            <p>All the images and annotations in the O2DTD dataset are stored in PNG format, enabling the researchers to use them for their research easily.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-database"></i> </div>
-          <div class="icon-text">
-            <h4 class="title-box">Over 5,000 Images with Pixel Level Annotations</h4>
-            <p>The O2DTD dataset contains over 5,000 images with pixel-level annotations of three classes (sky, ground, and trail) to train and evaluate the algorithms.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box bg-white text-center">
-          <div class="icon"> <i class="fas fa-cogs"></i> </div>
-          <div class="icon-text">
-            <h4 class="title-box">Off-road Desert Trail Segmentation Benchmark</h4>
-            <p>We also present the segmentation benchmark called DTSNet, which is trained using various loss functions, optimizers, and learning rates.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+ </div>
   </div>
 </div>
 
