--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         <h3>O2DTD Dataset Features</h3>
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box bg-white text-center">
+        <div class="service-box2 bg-white text-center">
           <div class="icon"> <i class="fas fa-bullhorn"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">First Dataset for Desert Free Space Detection</h4>
@@ -902,7 +902,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box bg-white text-center">
+        <div class="service-box2 bg-white text-center">
           <div class="icon"> <i class="fas fa-map-marked-alt"></i> </div>
           <div class="icon-text">
             <h4 class="title-box">Collected in Natural Desert Environment</h4>
@@ -910,7 +910,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box bg-white text-center">
+        <div class="service-box2 bg-white text-center">
           <div class="icon"> <i class="fas fa-clock"></i></div>
           <div class="icon-text">
             <h4 class="title-box">Cover Six Different Light Conditions</h4>
