--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
   <div class="container">
     <div class="row">
       <div class="col-md-12 section-title text-center">
-        <h3>O2DTD Dataset Features</h3>
+        <h3>Download Center</h3>
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box2 bg-white text-center">
@@ -913,7 +913,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         <div class="service-box2 bg-white text-center">
           <div class="icon"> <i class="fas fa-clock"></i></div>
           <div class="icon-text">
-            <h4 class="title-box">Cover Six Different Light Conditions</h4>
+            <h4 class="title-box">Cover Six Different Light Down</h4>
           </div>
         </div>
       </div>
