--- a/index.html
+++ b/index.html
@@ -895,25 +895,17 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box2 bg-white text-center">
-          <div class="icon"> <i class="fas fa-bullhorn"></i> </div>
+          <div class="icon"> <i class="fas fa-arrow-alt-to-bottom"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">First Dataset for Desert Free Space Detection</h4>
+            <h4 class="title-box">Download O2DTD Dataset</h4>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box2 bg-white text-center">
-          <div class="icon"> <i class="fas fa-map-marked-alt"></i> </div>
+          <div class="icon"> <i class="fab fa-github"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Collected in Natural Desert Environment</h4>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
-        <div class="service-box2 bg-white text-center">
-          <div class="icon"> <i class="fas fa-clock"></i></div>
-          <div class="icon-text">
-            <h4 class="title-box">Cover Six Different Light Down</h4>
+            <h4 class="title-box">Benchmark</h4>
           </div>
         </div>
       </div>
