--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         <div class="service-box2 bg-white text-center">
           <div class="icon"> <i class="fab fa-github"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Benchmark</h4>
+            <h4 class="title-box"><a href="https://github.com/BilalHassan90/DTSNet-O2DTD" >Benchmark</a></h4>
           </div>
         </div>
       </div>
