--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         <div class="service-box2 bg-white text-center">
           <div class="icon"> <i class="fas fa-folder-download"></i> </div>
           <div class="icon-text">
-            <h4 class="title-box">Download O2DTD Dataset</h4>
+            <h4 class="title-box">O2DTD Dataset</h4>
           </div>
         </div>
       </div>
@@ -909,6 +909,15 @@ All the images and ground truth labels in the dataset are stored in PNG format w
           </div>
         </div>
       </div>
+      <div class="col-md-4 mb-30">
+        <div class="section-info">
+          <div class="sub-title-paragraph">
+            <p>If you have any question, contact us at: bilal.hassan@ku.ac.ae </p>
+          </div>
+        </div>
+      </div>
+        
+        
  </div>
   </div>
 </div>
