--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         <span class="section-title-line"></span> </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-30">
         <div class="service-box2 bg-white text-center">
-          <div class="icon"> <i class="fas fa-folder-download"></i> </div>
+          <div class="icon"> <i class="fas fa-cloud-download-alt"></i></div>
           <div class="icon-text">
             <h4 class="title-box">O2DTD Dataset</h4>
           </div>
