--- a/index.html
+++ b/index.html
@@ -912,6 +912,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
       <div class="col-md-4 mb-30">
         <div class="section-info">
           <div class="sub-title-paragraph">
+            <h4>Contact</h4>
             <p>If you have any question, contact us at: bilal.hassan@ku.ac.ae </p>
           </div>
         </div>
