--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Features</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Description</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="4">Sample Data</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="4">Download</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="5">Download</a> </li>
       </ul>
     </div>
   </div>
@@ -49,7 +49,7 @@
     <div class="container">
       <h1 class="text-capitalize"><b>O2DTD:</b> <b>O</b>ff-road <b>O</b>pen <b>D</b>esert <b>T</b>rail <b>D</b>etection</h1>
       <p>A novel dataset for autonomous navigation in arid unstructured environments</p>
-      <a href="#" class="banner-btn">Get Started</a> </div>
+      <a data-scroll-nav="5" class="banner-btn">Download</a> </div>
   </div>
 </div>
 
