--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@ All the images and ground truth labels in the dataset are stored in PNG format w
         
           <br>
           <br>
-          <br>
+          <br>&nbsp
  </div>
   </div>
 </div>
