--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
         <div class="section-info">
           <div class="sub-title-paragraph">
 <p>
-The dataset was collected with six different light conditions (dawn, morning, afternoon, sunset, twilight, and night), containing a total of 5,045 RGB images, 
-as summarized in Table below. Moreover, each image is labeled with three classes consisting of the sky (blue), ground (yellow), and trail (gray) regions.
+We gathered a dataset that includes 5,045 RGB images captured under six distinct lighting conditions: dawn, morning, afternoon, sunset, twilight, 
+and night. These images are categorized into three classes: sky (blue), ground (yellow), and trail (gray) regions. The details of the dataset, 
+including the image count and classes, can be found in the table below.
 </p>
 <br>
 <center>Table I: Summary of the off-road open desert trail detection (O2DTD) dataset 
@@ -236,10 +237,10 @@ as summarized in Table below. Moreover, each image is labeled with three classes
               
               
 <p>
-All the images and ground truth labels in the dataset are stored in PNG format with 576 × 768 resolution, making it easy to use. Besides, we have randomly 
-    split the dataset for each illumination condition in the ratio of 70:10:20 for training, validation, and testing purposes of the model. These images and 
-    labels are stored separately in sub-folders inside the main directory. Further, we have provided the ground truth labels in two formats 
-    (single channel and RGB). Table II provides the annotation details.
+The dataset contains images and corresponding ground truth labels, all saved in PNG format with a resolution of 576 × 768 for convenience. 
+To facilitate model training, validation, and testing, we have randomly divided the dataset based on illumination conditions, allocating 70% 
+for training, 10% for validation, and 20% for testing. Both the images and labels are stored in separate sub-folders within the main directory. 
+Additionally, the ground truth labels are available in two formats: single channel and RGB. For more information on annotations, please refer to Table II.
 </p>
 <br>
 <center>Table II:  Ground truth annotation details for the O2DTD dataset</center>
