--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@ Additionally, the ground truth labels are available in two formats: single chann
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-          <p>&copy; Copyright 2023 - <a href = "avlab.io"><strong>AV-lab</strong></a>. All Rights Reserved. 
+          <p>&copy; Copyright 2023 - <a href = "https://avlab.io/"><strong>AV-lab</strong></a>. All Rights Reserved. 
               <br> Designed by: <a href="http://w3Template.com" target="_blank" rel="dofollow">W3 Template</a></p>
       </div>
     </div>
